<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/chats" />
        <item
            android:id="@+id/friendRequests"
            android:icon="@drawable/ic_baseline_group_add_24"
            android:title="Friend Requests" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_slideshow2"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_slideshow3"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/nav_slideshow4"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout"
            android:onClick="logout"/>
    </group>
</menu>